# FlowForge-Backend

./: .env  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: ac920d6c8a1c_initial_schema.py
app/: main.py
app/api/: deps.py
app/api/routers/: __init__.py  auth.py  project.py  project_invite.py  task.py
app/core/: config.py  logging.py  permissions.py  redis.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  project.py  project_invite.py  project_member.py  task.py  user.py  white_board.py
app/schemas/: project.py  project_invite.py  project_member.py  task.py  token.py  user.py  whiteboard.py
app/services/: activity.py  email.py  whiteboard_manager.py
tests/: conftest.py
tests/core/: test_permissions.py  test_security.py
tests/routers/: test_project.py  test_project_invite.py  test_task.py
tests/routes/: test_auth.py
